Fix small alignment issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,7 @@ h1 {
   position: fixed;
   width: 100%;
   bottom: 0;
+  left: 0;
   margin-bottom: 5rem;
 }
 
